kustomize/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter-api-ingress
spec:
  ingressClassName: staging-nginx
  rules:
    - host: starter-api-stag.javobal.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: starter-api-service
              port:
                number: 80
